# ScanDP

./: .gitignore  LICENSE  README.md  README_ja.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
docs/: ERROR_CATCH.md  SETUP.md  USAGE.md  USAGE_ja.md
scandp/: .gitignore  convert_demos.py  create_dataset.py  create_dataset_from_hdf5.py  create_dataset_real.py  dataset_recorder.py  deploy_demo.py  deploy_gridmap+pcd.py  deploy_gridmap.py  deploy_gridmap_feat.py  deploy_pcd.py  deploy_random.py  deploy_real.py  deploy_real_dp3.py  extract_pose_from_hdf5.py  main_ogm_random.py  vis_dataset.py
scandp/diffusion_policy_3d/config/: dp3.yaml  dp_224x224_r3m.yaml  idp3.yaml  scandp_conv3d.yaml  scandp_img+conv3d.yaml  scandp_img_r3m.yaml  scandp_pointnet2.yaml  scandp_ptv3.yaml  scandp_spconv+pc.yaml  scandp_spconv.yaml
scandp/diffusion_policy_3d/module/: bresenham_torch.py  extractor_dinov2.py  gridmap.py  gridmap_feat.py  publisher.py  vis_trajectory.py
scandp/diffusion_policy_3d/policy/: diffusion_gridmap_policy.py  diffusion_image_policy.py  diffusion_pointcloud_policy.py  dp3.py
scandp/diffusion_policy_3d/tools/: plt_csv.py  vis_dataset_hdf5.py  vis_pcd.py  visualize_voxel.py
scandp/ground_truth/: convert_obj2gt.py  coverage.py  coverage_fpfh.py  coverage_gt.py  plt_pcd_ploty.py  plt_voxel.py  stl2pc.py
scripts/: dataset.sh  deploy_genesis.sh  deploy_genesis_feat.sh  deploy_gridmap+pc.sh  deploy_policy.sh  deploy_random.sh  deploy_real.sh  deploy_real_dp3.sh  run_rtabmap.sh  train_policy.sh  vis_dataset.sh
src/i611_moveit_config/: .setup_assistant  CMakeLists.txt  README.md  package.xml
src/i611_moveit_config/config/: fsrobo_r.srdf  (+7 more)
src/i611_ros/: CMakeLists.txt  README.md  package.xml
src/i611_ros_control/: CMakeLists.txt  README.md  package.xml
src/i611_ros_control/config/: controllers.yaml
src/i611_ros_control/include/i611_ros_control/: i611_hw_interface.h
src/i611_ros_control/launch/: i611_ros_control.launch
src/i611_ros_control/src/: i611_hw_interface.cpp  i611_hw_node.cpp
test/server/: ds102.py  ds102_server.py  i611_continuous_move.py  i611_server.py
(+88 files in other folders)
