[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "decord>=0.6.0",
    "diffusers>=0.36.0",
    "dill>=0.4.1",
    "einops>=0.8.1",
    "h5py>=3.15.1",
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.8",
    "numba>=0.63.1",
    "numpy<2",
    "numcodecs<0.16",
    "open3d>=0.19.0",
    "opencv-python>=4.11.0.86",
    "pillow>=12.1.0",
    "psutil>=7.2.1",
    "pycocotools>=2.0.11",
    "pyyaml>=6.0.3",
    "rospkg>=1.6.1",
    "spconv-cu118>=2.3.8",
    "termcolor>=3.3.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "wandb>=0.24.1",
    "zarr==2.12",
    "opencv-contrib-python>=4.11.0.86",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"
