<?xml version="1.0"?>
<package format="2">
  <name>i611_ros_control</name>
  <version>0.0.1</version>
  <description>ros_control hardware interface for i611 robot</description>

  <maintainer email="user@example.com">user</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>position_controllers</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>xmlrpcpp</depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
